# N2HE-cosine-similarity-batch

./: CMakeLists.txt  README.md  test.cpp
include/: include.hpp
include/LWEscheme/: LWE_64.hpp
include/RLWEscheme/: LT.hpp  LWE_to_RLWE.hpp  Poly_eval-2.hpp  Poly_eval.hpp
include/test/: batch_cos_eval.hpp  test_enc_vec_dis.hpp
